--- a/src/htmlContent/main-view.html
+++ b/src/htmlContent/main-view.html
@@ -41,9 +41,10 @@
     <!-- Main UI: horizontal set of sidebar, main content vertical stack, and vertical toolbar -->
     <div class="main-view">
         <div id="sidebar" class="sidebar panel quiet-scrollbars horz-resizable right-resizer collapsible" data-minsize="0" data-forceleft=".content">
-            <div id="working-set-header">{{WORKING_FILES}}
+            <div id="working-set-header">{{PRESENTATION_SLIDES}}
                 <div id="working-set-option-btn" class="btn-alt-quiet"></div>
             </div>
+            
             <div id="open-files-container">
                 <!-- This will contain runtime-generated <li>'s for each file in the working set -->
                 <ul>
@@ -54,7 +55,7 @@
                 <span id="project-title" class="title"></span>
             </div>
             <div id="project-files-container">
-                <!-- This will contain a dynamically generated <ul> hierarchy at runtime -->
+<!--                 This will contain a dynamically generated <ul> hierarchy at runtime -->
             </div>
         </div>
         
